--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                               <!-- Герой -->
     <section class="hero">
     <h1 class="hero-title">эффективные решения для вашего бизнеса</h1>
-        <button class="order-button" type="button" >Заказать услугу</button>
+        <button type="button" class="order-button" >Заказать услугу</button>
 </section>
 <section class="section ">
                              <!--преимущества-->
